@@ -3,8 +3,11 @@ package com.motovehicle.vehicledealership.security;
 import com.motovehicle.vehicledealership.model.UserEntity;
 import com.motovehicle.vehicledealership.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
+
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -17,7 +20,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         UserEntity user = userRepository.findByUsername(username)
                 .orElseThrow(() -> new UsernameNotFoundException("User not found"));
         return new org.springframework.security.core.userdetails.User(
-                user.getUsername(), user.getPassword(), java.util.Collections.emptyList()
+                user.getUsername(), user.getPassword(), List.of(new SimpleGrantedAuthority(user.getRole()))
         );
     }
 }
